public/stylesheets/home.css
@media (max-width: 480px) {
    body {
        background-image: url(/images/homepagebackground.jpeg);
        /* background-position: center;
        text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); */
    }
}

@media (min-width: 500px) {
    body {
        height: 100vh;
        background-image: url("/images/homepagebackground.jpeg");
        background-position: center;
        /* text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); */
        box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
    }
}


.cover-container {
    max-width: 60vw;
}

.nav-link {
    padding: 0.25rem 0;
    font-weight: 700;
    /* color: rgba(255,255,255,0.5); */
    color: black;
    margin-left: 1rem;
    border-bottom: 0.25rem solid transparent;
}

.nav-link:hover{
    color: rgba(88, 87, 87, 0.5);
    border-bottom-color:rgba(88, 87, 87, 0.5);
}

.nav-link.active {
    /* color: white; */
    color: black;
    border-bottom-color:grey;
}

.btn-secondary, .btn-secondary:hover{
    color: #333;
    text-shadow: none;
}

